# graphics_programming

./: CMakeLists.txt  README.md
code/: Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  HalfEdgeMesh.cpp  HalfEdgeMesh.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PackedVertex.cpp  PackedVertex.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h  ViewFrustumCheck.cpp  ViewFrustumCheck.h  main.cpp  openglwin.cpp  openglwin.h  openglwin.ui  settingswin.cpp  settingswin.h  settingswin.ui
code/resources/: openglwin.qrc
extralibs/mypersonalmathlib/: CMakeLists.txt  matrix33.cc  matrix33.h  matrix44.cc  matrix44.h  mypersonalmathlib.h  mypersonalmathlibconstants.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.cc  vector4.h
